--- a/mail/dovecot/dovecot.master
+++ b/mail/dovecot/dovecot.master
@@ -21,7 +21,7 @@ service lmtp {
 }
 
 protocol imap {
-  mail_plugins = $mail_plugins imap_quota
+  mail_plugins = $mail_plugins quota imap_quota
 }
 
 protocol lmtp {
